[tool.poetry]
name = "cdm"
version = "v0.1.0"
description = "The ECLS CDM - an OMOP CDM expansion to map ECLS-related data"
authors = []
license = "CC0-1.0 Universal"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.43"
mkdocs-glightbox = "^0.4.0"
pre-commit = "^4.0.1"
ipython = "^8.29.0"
black = "^24.10.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
